--- a/Admixture/README.Rmd
+++ b/Admixture/README.Rmd
@@ -18,19 +18,19 @@ The script found [here](Sterrhoptilus_PrepforAdmixture.R) was used with the link
 
 ### *ADMIXTURE* on all four Sterrhoptilus species
 
-*S. capitalis*, *S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* with singletons in [AdmixNoOutgroup](AdmixAllSpecies)
+*S. capitalis*, *S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* with singletons in [AdmixAllSpecies](AdmixAllSpecies)
 
-*S. capitalis*, *S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* without singletons in [AdmixNoSingletonsNoOutgroup](AdmixAllSpeciesNoSingletons)
+*S. capitalis*, *S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* without singletons in [AdmixAllSpeciesNoSingletons](AdmixAllSpeciesNoSingletons)
 
 R script for visualizing the results with all four species is [here](Sterrhoptilus_VisualizingAdmixture_AllSpecies.R)
 
 ### *ADMIXTURE* on three Sterrhoptilus species (excluding *S. capitalis*)
 
-*S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* with singletons in [AdmixNoOutgroup](AdmixNoCapitalis)
+*S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* with singletons in [AdmixNoCapitalis](AdmixNoCapitalis)
 
-*S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* without singletons in [AdmixNoOutgroup](AdmixNoCapitalisNoSingletons)
+*S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* without singletons in [AdmixNoCapitalisNoSingletons](AdmixNoCapitalisNoSingletons)
 
-R script for visualizing the results with three species is [here](Sterrhoptilus_VisualizingAdmixture_NoCapitalis)
+R script for visualizing the results with three species is [here](Sterrhoptilus_VisualizingAdmixture_NoCapitalis.R)
 
 ### *ADMIXTURE* on only *S. affinis* and *S. dennistouni*
 
