Fixed links in README

--- a/Data/README.Rmd
+++ b/Data/README.Rmd
@@ -16,7 +16,7 @@ This folder contains all data needed to conduct the analyses in this repository.
 
 I demultiplexed the raw Illumina sequence data using *Stacks* process_radtags function, using these [barcodes](./Running_Stacks/Barcodes.txt). I then ran [Devon DeRaad's](https://github.com/DevonDeRaad) fastqcr Rmd [script](./Running_Stacks/fastqcr.Rmd) on the data to produce an [html document](./Running_Stacks/qc.html) with initial information on the quality of the reads per sample. This immediately informed me that I should drop all samples with less than 10% of reads than the median (13 samples in total).
 
-I iterated over [m](./Running_Stacks/optimize.m.sh), [M](./Running_Stacks/optimize.bigm.sh), and [n](./Running_Stacks/optimize.n.sh), respectively to determine that the optimal parameters were [-m 4](ParameterOptimizationmplot.svg), [-M 3](ParameterOptimizationBigMPlot.svg) and [-n 4](ParameterOptimizationnPlot.svg) (the asterisks denote the number of loci with 80% completeness, the red asterisk shows which value for that parameter retained the most loci). The vcf following *Stacks* parameter optimization before any filtering and quality control is called [n4.vcf.gz](./Running_Stacks/n4.vcf.gz).
+I iterated over [m](./Running_Stacks/optimize.m.sh), [M](./Running_Stacks/optimize.bigm.sh), and [n](./Running_Stacks/optimize.n.sh), respectively to determine that the optimal parameters were [-m 4](./Running_Stacks/ParameterOptimization_m_Plot.s) [-M 3](./Running_Stacks/ParameterOptimization_BigM_Plot.svg) and [-n 4](./Running_Stacks/ParameterOptimization_n_Plot.svg) (the asterisks denote the number of loci with 80% completeness, the red asterisk shows which value for that parameter retained the most loci). The vcf following *Stacks* parameter optimization before any filtering and quality control is called [n4.vcf.gz](./Running_Stacks/n4.vcf.gz).
 
 #### SNP Filtering
 
