Added more detail to IQTree README

--- a/PhylogeneticTrees/README.Rmd
+++ b/PhylogeneticTrees/README.Rmd
@@ -12,7 +12,8 @@ This folder contains all files and results from running *IQTree* to make a phylo
 
 ### IQTree
 
-The folder [IQTree](IQTree) contains the bash script for running *IQTree* and all the subsequent results. I performed 1000 ultra-fast bootstrap replicates and had IQTree select the best AIC tree.
+The folder [IQTree](IQTree) contains the bash script for running *IQTree* and all the subsequent results. I generated [pops.phy](./IQTree/pops.phy) file for input into *IQTree* with *Stack's* population model with [whitelist.txt](./IQTree/whitelist.txt)(containing all locus names) and [iqtree.popmap.txt](./IQTree/iqtree.popmap.txt)(containing all samples) files.
+I performed 1000 ultra-fast bootstrap replicates and had IQTree select the best AIC tree.
 
 I visualized [pops.phy.treefile](IQTree/pops.phy.treefile) with *FigTree*, rooted on the outgroup *D. plateni*.
 
