--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ A sampling map can be found in the folder [SamplingMap](./SamplingMap) to visual
 
 ### Phylogenetic Tree Reconstructions
 
-I used the filtered datasets to reconstruct *Sterrhoptilus* phylogenetic relationships and looked at a rooted tree with *IQTree* and an unrooted phylogenetic network with *SplitsTree*. The results and necessary data can be found in the folder [PhylogeneticTrees](./PhylogeneticTrees)
+I used the filtered datasets to reconstruct *Sterrhoptilus* phylogenetic relationships and looked at a rooted tree with *IQTree*, an unrooted phylogenetic network with *SplitsTree*, and a species tree using *SNAPP*. The results and necessary data can be found in the folder [PhylogeneticTrees](./PhylogeneticTrees)
 
 ### PCA and Fst
 
@@ -33,3 +33,7 @@ I ran *ADMIXTURE* several times on this dataset, subsetting the data and includi
 I first tested for hybridization in *Sterrhoptilus* by looking at Patterson's D statistic (ABBA/BABA tests) and found that *S. nigrocapitatus* and *S. affinis* had a non-significant D statistic, but *S. affinis* and *S. dennistouni* did share an excess of alleles than would be expected from incomplete lineage sorting alone. Those results can be found in the [Dsuite](./Dsuite) folder.
 
 I then looked at heterozygosity and hybrid index, to determine what generation of hybrids were sampled. I performed two similar runs, both within the [TrianglePlot](./TrianglePlot) folder, were I chose different *S. dennistouni* to be one parental population.
+
+### Mitochondrial Data
+
+I downloaded the sequenced mitochondrial data from [Hosner et al. 2018](https://doi.org/10.1007/s10592-018-1085-4) and constructed a phylogenetic tree and mitochondrial haplotype network. Exact specifications for both visualizations can be found in the [MitochondrialData](./MitochondrialData) folder.
