Fixed image captions in READMEs

--- a/Dsuite/README.Rmd
+++ b/Dsuite/README.Rmd
@@ -16,7 +16,9 @@ I used [this tree](Dsuite_betweenAffinisandNigrocapitatus/nwk.tre.txt) (see belo
 
 I received a non-significant Patterson's D statistic of 0.09798, with a subsequent Z-score of 1.1569 yielding a p-value of 0.2473 (see the [resulting text files](./Dsuite_betweenAffinisandNigrocapitatus/stachyris.pops_affinis_hybrid_tree.txt).
 
-![Tree Used with Dsuite to test for gene flow between *S. nigrocapitatus* and *S. affinis*](./Dsuite_betweenAffinisandNigrocapitatus/Dsuite_TreeVisualized.PNG)
+##### Tree Used with Dsuite to test for gene flow between *S. nigrocapitatus* and *S. affinis*
+
+![](./Dsuite_betweenAffinisandNigrocapitatus/Dsuite_TreeVisualized.PNG)
 
 ### Testing for Shared Alleles between *S. affinis* and *S. dennistouni*
 
@@ -26,7 +28,9 @@ I first tested for excess shared alleles between *S. dennistouni* and *S. affini
 
 As expected, Dsuite found that the configuration with the most BBAA patterns was a tree where *S. dennistouni* and *S. affinis* was sister. To view the results with the forced tree below, the text file titled [stachyris.pops_all.samples_tree.txt](./Dsuite_betweenDenandAff_CapasOutgroup/stachyris.pops_all.samples_tree.txt) uses this tree to look for excessive shared alleles. I received a highly significant Patterson's D statistic of 0.64199, with a subsequent Z-score of 16.035 leading to a p-value < 0.0001, but this was expected since the guide tree was not supported by phylogenetic reconstructions.
 
-![Tree Used with Dsuite to test for gene flow between *S. dennistouni* and *S. affinis*, with all four *Sterrhoptilus* species](./Dsuite_betweenDenandAff_CapasOutgroup/Dsuite_TreeVisualized.PNG)
+##### Tree Used with Dsuite to test for gene flow between *S. dennistouni* and *S. affinis*, with all four *Sterrhoptilus* species
+
+![](./Dsuite_betweenDenandAff_CapasOutgroup/Dsuite_TreeVisualized.PNG)
 
 #### *S. dennistouni* split into birds from putative hybrid zone and birds to the north of it
 
@@ -34,4 +38,6 @@ To better reflect the phylogenetic tree recovered, I split the *S. dennistouni* 
 
 I received a significant Patterson's D statistic of 0.210524, with a subsequent Z-score of 4.68472 yielding a p-value of 1.4017e-06 (see the [resulting text files](./Dsuite_betweenDenandAff_DenSplit/stachyris.pops_densplit_tree.txt)).
 
-![Tree Used with Dsuite to test for gene flow between *S. dennistouni* and *S. affinis*, with *S. dennistouni* populations split as from the putative hybrid zone and not from this locality](./Dsuite_betweenDenandAff_DenSplit/Dsuite_TreeVisualized.PNG)
+##### Tree Used with Dsuite to test for gene flow between *S. dennistouni* and *S. affinis*, with *S. dennistouni* populations split as from the putative hybrid zone and not from this locality
+
+![](./Dsuite_betweenDenandAff_DenSplit/Dsuite_TreeVisualized.PNG)
