Fixing order of singleton-removing for admix

--- a/Admixture/README.Rmd
+++ b/Admixture/README.Rmd
@@ -14,29 +14,29 @@ For each of the six *ADMIXTURE* runs, I report the results in the appropriate fo
 
 ### Prepping vcf file for running *ADMIXTURE*
 
-The script found [here](Sterrhoptilus_PrepforAdmixture.R) was used with the linkage-filtered dataset found in the [data folder](../Data/Sterrhoptilus_vcf_thinned.gz) to remove singletons and subset the data as necessary.
+The script found [here](Sterrhoptilus_PrepforAdmixture.R) was used with the outgroup-removed dataset found in the [data folder](../Data/Sterrhoptilus_vcf_thinned.gz) to remove singletons, linkage filter, and subset the data as necessary.
 
 ### *ADMIXTURE* on all four Sterrhoptilus species
 
-*S. capitalis*, *S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* with singletons in [AdmixAllSpecies](AdmixAllSpecies)
+*S. capitalis*, *S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* with singletons in [AdmixAllSpecies](AdmixAllSpecies) (4703 SNPs)
 
-*S. capitalis*, *S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* without singletons in [AdmixAllSpeciesNoSingletons](AdmixAllSpeciesNoSingletons)
+*S. capitalis*, *S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* without singletons in [AdmixAllSpeciesNoSingletons](AdmixAllSpeciesNoSingletons) (3692 SNPs)
 
 R script for visualizing the results with all four species is [here](Sterrhoptilus_VisualizingAdmixture_AllSpecies.R)
 
 ### *ADMIXTURE* on three Sterrhoptilus species (excluding *S. capitalis*)
 
-*S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* with singletons in [AdmixNoCapitalis](AdmixNoCapitalis)
+*S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* with singletons in [AdmixNoCapitalis](AdmixNoCapitalis) (3998 SNPs)
 
-*S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* without singletons in [AdmixNoCapitalisNoSingletons](AdmixNoCapitalisNoSingletons)
+*S. nigrocapitatus*, *S. affinis*, and *S. dennistouni* without singletons in [AdmixNoCapitalisNoSingletons](AdmixNoCapitalisNoSingletons) (2975 SNPs)
 
 R script for visualizing the results with three species is [here](Sterrhoptilus_VisualizingAdmixture_NoCapitalis.R)
 
 ### *ADMIXTURE* on only *S. affinis* and *S. dennistouni*
 
-*S. affinis* and *S. dennistouni* with singletons in [AdmixOnlyDenandAff](AdmixOnlyDenandAff)
+*S. affinis* and *S. dennistouni* with singletons in [AdmixOnlyDenandAff](AdmixOnlyDenandAff) (3502 SNPs)
 
-*S. affinis* and *S. dennistouni* without singletons in [AdmixOnlyDenandAffNoSingletons](AdmixOnlyDenandAffNoSingletons)
+*S. affinis* and *S. dennistouni* without singletons in [AdmixOnlyDenandAffNoSingletons](AdmixOnlyDenandAffNoSingletons) (2601 SNPs)
 
 R script for visualizing the results with only two species is [here](Sterrhoptilus_VisualizingAdmixture_OnlyDenandAff.R)
 
